--- a/client/python-compiler-client/package.json
+++ b/client/python-compiler-client/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/history": "^0.19.2",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.8",
     "@types/crypto-js": "^4.2.2",
+    "@uiw/react-codemirror": "^4.25.3",
     "crypto-js": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
