--- a/client/python-compiler-client/package.json
+++ b/client/python-compiler-client/package.json
@@ -17,7 +17,9 @@
     "@codemirror/view": "^6.38.8",
     "@types/crypto-js": "^4.2.2",
     "@uiw/react-codemirror": "^4.25.3",
+    "@uiw/react-textarea-code-editor": "^3.1.1",
     "crypto-js": "^4.2.0",
+    "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "socket.io-client": "^4.8.1"
@@ -28,10 +30,14 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "auto-prefixer": "^0.4.2",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2"
