Trying out Cursor

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 HMAC_SECRET_KEY="example"
-
+# bcrypt hash for the single allowed user password (generate with: python -c "import bcrypt; print(bcrypt.hashpw(b'YOUR_PASSWORD', bcrypt.gensalt()).decode())")
+PASSWORD_HASH='$2b$12$...'
